--- a/osworks-api/src/main/resources/application.properties
+++ b/osworks-api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/teste?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=postgres
+spring.datasource.password=suasenha
 
+spring.jpa.show-sql=true
